[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docuhook"
version = "0.1.0"
description = "AI Git Pre-commit Doc Sync"
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["requests"]

[project.scripts]
docuhook = "docuhook.main:main"
